--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Restaurant Page</title>
 </head>
 <body>
-  <h1 class="hello">Hello</h1>
+  <header>
+    <nav>
+      <button>Home</button>
+      <button>Menu</button>
+      <button>About</button>
+      <button>Contact</button>
+    </nav>
+  </header>
+  <div id="content">
+    <h1 class="header">Restaurant Page</h1>
+  </div>
 </body>
 </html>
