--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,28 @@
     </nav>
   </header>
   <div id="content">
-    <h1 class="header">Restaurant Page</h1>
+    <main>
+      <section id="home">
+          <h1>Welcome to Our Restaurant</h1>
+          <p>Experience the best dining experience with us.</p>
+      </section>
+      <section id="menu">
+          <h2>Our Menu</h2>
+          <ul>
+              <li>Dish 1 - $10</li>
+              <li>Dish 2 - $15</li>
+              <li>Dish 3 - $20</li>
+          </ul>
+      </section>
+      <section id="contact">
+          <h2>Contact Us</h2>
+          <p>Email: contact@restaurant.com</p>
+          <p>Phone: (123) 456-7890</p>
+      </section>
+  </main>
+  <footer>
+      <p>&copy; 2024 Restaurant Name. All rights reserved.</p>
+  </footer>
   </div>
 </body>
 </html>
