comment out html to work on adding menu using js and dom

--- a/src/index.html
+++ b/src/index.html
@@ -20,39 +20,36 @@
           <button class="options" value="snacks">Snacks</button>
           <button class="options" value="beverages">Beverage</button>
         </nav>
-        <div id="content">
-          <div class="menu-container">
-            <h2>Grill</h2>
-            <ul>
-                <li class="menu-option">
-                  <h3 class="menu-title">
-                    <span class="dish-name">Dish 1</span>
-                    <span class="separator"></span>
-                    <span class="dish-price">$8</span>
-                  </h3>
-                  <p>Grilled vegetables with pommes frites</p>
-                </li>
-                <li class="menu-option">
-                  <h3 class="menu-title">
-                    <span class="dish-name">Dish 1</span>
-                    <span class="separator"></span>
-                    <span class="dish-price">$8</span>
-                  </h3>
-                  <p>Grilled vegetables with pommes frites</p>
-                </li>
-                <li class="menu-option">
-                  <h3 class="menu-title">
-                    <span class="dish-name">Dish 1</span>
-                    <span class="separator"></span>
-                    <span class="dish-price">$8</span>
-                  </h3>
-                  <p>Grilled vegetables with pommes frites</p>
-                </li>
-              </ul>
-            </div>
+        <div id="content" class="menu-container">
+          <!-- <h2>Grill</h2>
+          <ul>
+              <li class="menu-option">
+                <h3 class="menu-title">
+                  <span class="dish-name">Dish 1</span>
+                  <span class="separator"></span>
+                  <span class="dish-price">$8</span>
+                </h3>
+                <p>Grilled vegetables with pommes frites</p>
+              </li>
+              <li class="menu-option">
+                <h3 class="menu-title">
+                  <span class="dish-name">Dish 1</span>
+                  <span class="separator"></span>
+                  <span class="dish-price">$8</span>
+                </h3>
+                <p>Grilled vegetables with pommes frites</p>
+              </li>
+              <li class="menu-option">
+                <h3 class="menu-title">
+                  <span class="dish-name">Dish 1</span>
+                  <span class="separator"></span>
+                  <span class="dish-price">$8</span>
+                </h3>
+                <p>Grilled vegetables with pommes frites</p>
+              </li>
+          </ul> -->
         </div>
-        </section>
-      </div>
+      </section>
 
         <!-- <div>
           <img src="" alt="falafel">
