Update homepage layout and styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   </header>
     <main>
       <section id="home">
-          <h1>Welcome to Our Restaurant</h1>
+          <h1 class="welcome">Welcome to</h1>
+          <h1 class="restaurant">Our Restaurant</h1>
           <p>Experience the best dining experience with us.</p>
       </section>
       <section id="menu">
