update styling for contact and footer

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
       </section>
   </main>
   <footer>
-      <p>&copy; 2024 Restaurant Name. All rights reserved.</p>
+      <p>Restaurant Name &copy; 2024</p>
+      <p>All rights reserved.</p>
   </footer>
 </body>
 </html>
