update menu options capitalization

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
       </section>
       <section id="menu">
         <nav id="nav-menu">
-          <button class="options" value="grill">Grill</button>
-          <button class="options" value="snacks">Snacks</button>
-          <button class="options" value="beverages">Beverage</button>
+          <button class="options" value="Grill">Grill</button>
+          <button class="options" value="Snacks">Snacks</button>
+          <button class="options" value="Beverages">Beverage</button>
         </nav>
         <div id="content" class="menu-container">
         </div>
